methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: ';' expected but 'return' found.
def haveBaggle():Boolean = {var seenBaggle:boolean=false; for (stepper<-1 to 7) {if (isOverBaggle) {seenBaggle=true}; forward()} return seenBaggle} 
                                                                                                                                 ^